--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1{
-    color:rgb(54, 196, 184);
+    color:rgb(199, 150, 228);
 }
 
 body{
 
-    color:rgb(52, 186, 196)
+    color: rgb(144, 144, 236) (148, 15, 81)
 }
 
 
