--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1{
-    color:rgb(199, 150, 228);
+    color:rgb(176, 97, 212);
 }
 
 body{
 
-    color: rgb(144, 144, 236) (148, 15, 81)
+    color:rgb(150, 52, 196)
 }
 
 
