--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: azure;
+}
 h1{
     color:rgb(176, 97, 212);
 }
@@ -6,5 +9,6 @@ body{
 
     color:rgb(150, 52, 196)
 }
+
 
 
